# midibridge

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  settings.json  todo
source/: app.rc  dialog.cpp  dialog.hpp  font.cpp  main.cpp  router.cpp  router.hpp  sysex.cpp  sysex.hpp  window.cpp  window.hpp
